Fixed the filters (didnt work right on the last commit)